--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -1,21 +1,20 @@
 spring:
   application:
     name: API-GATEWAY
-cloud:
-  gateway:
-    routes:
-      - id: ORDER-SERVICE
-        uri: lb://ORDER-SERVICE
-        predicates:
-          - Path=/order/**
-        filters:
-          - StripPrefix=1
-      - id: PAYMENT-SERVICE
-        uri: lb://PAYMENT-SERVICE
-        predicates:
-          - Path=/payment/**
-        filters:
-          - StripPrefix=1
+
+
+  spring:
+    cloud:
+      gateway:
+        routes:
+          - id: ORDER-SERVICE
+            uri: lb://ORDER-SERVICE
+            predicates:
+              - Path=/order/**
+          - id: PAYMENT-SERVICE
+            uri: lb://PAYMENT-SERVICE
+            predicates:
+              - Path=/payment/**
 
 
 
@@ -25,8 +24,18 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
 
 
 server:
   port: 8085
+
+
+logging:
+  level:
+    root: TRACE
+    org.springframework.web: TRACE
+    com.howtodoinjava: TRACE
+    org.hibernate: TRACE
